--- a/index.html
+++ b/index.html
@@ -32,11 +32,109 @@
 
 <section class="container w-75 p-4 rounded-3">
     <div class="row d-flex justify-content-center btn-number ">
-            Loading... btnNumber        
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='1'>1</button>
+        </div>
+
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='2'>2</button>
+        </div>
+
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='3'>3</button>
+        </div>
+
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='4'>4</button>
+        </div>
+        
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='5'>5</button>
+        </div>
+
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='6'>6</button>
+        </div>
+
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='7'>7</button>
+        </div>
+
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='8'>8</button>
+        </div>
+
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='9'>9</button>
+        </div>
+
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='0'>0</button>
+        </div>
+
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='number' 
+            value='.'>.</button>
+        </div>
+
+        <div class='col-4'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='clear' 
+            value='clear'>clear</button>
+        </div>
     </div>
 
     <div class="row d-flex justify-content-center btn-operator">
-            Loading... btnOperator
+        <div class='col-6'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='operator' 
+            value='+'>+</button>
+        </div>
+
+        <div class='col-6'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='operator' 
+            value='-'>-</button>
+        </div>
+
+        <div class='col-6'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='operator' 
+            value='*'>*</button>
+        </div>
+
+        <div class='col-6'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='operator' 
+            value='/'>/</button>
+        </div>
+
+        <div class='col-12'><button 
+            class='m-2 p-3 w-100 button-effect'
+            data-id='process' 
+            value='='>=</button>
+        </div>        
     </div>
 </section>
 
