--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <header class="container">
     <div class="row">
         <div class="col-12" >
-            <p class="display text-white text-center" >0</p>
+            <h1 class="display text-white text-center" >0</h1>
+            <h2 class="display-equation text-white text-center"></h2>
         </div>
     </div>
 </header>
@@ -135,11 +136,19 @@
 
         <div class='col-12'><button 
             class='m-2 p-3 w-100 button-effect'
-            data-id='process' 
+            data-id='calculate' 
             value='='>=</button>
         </div>  
     </div>
 </section>
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <p class="text-center"><a href="https://github.com/jsohndata/app-calculator" target="_blank">See the code on Github</a></p>
+        </div>
+    </div>
+</footer>
 
 <script src="./scripts/string-math.js"></script>
 <script src="./scripts/calculator-script.js"></script>
